--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "session": "^0.1.0",
+    "socket.io": "^4.8.1",
     "zod": "^3.25.42"
   }
 }
